# lumen-engine

./: .gitignore  CMakeLists.txt  GUI.cpp  GUI.h  LumenEngine.pro  README.md  main.cpp  renderKernel.cu  renderKernel.h
api/cuda/: cutil_math.h
api/glfw/tests/: timeout.c
res/scenes/: cornellScene.txt  cornellSceneCL.txt  cornellSceneCUDA.txt  testScene.txt
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/cuda/: cudaRenderer.cpp  cudaRenderer.h  lumenCUDA.cpp  lumenCUDA.h  renderKernel.cu  renderKernel.h  smallptCUDA.cu.bak
src/interface/: GUI.cpp  GUI.h  lumenGL.cpp  lumenGL.h  lumenGUI.cpp  lumenGUI.h
src/opencl/: OCL.cpp  OCL.h  lumenKernel.cl
src/renderer/: gui.cpp  gui.h  renderer.cpp  renderer.h
src/resources/: material.h  object.h  scene.cpp  scene.h
src/scene/: material.h  object.h  scene.cpp  scene.h  sceneParser.cpp  sceneParser.h
